--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -10,6 +10,11 @@ path = 'contracts/policy-issuance.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.premium-calculation]
+path = 'contracts/premium-calculation.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.weather-oracle]
 path = 'contracts/weather-oracle.clar'
 clarity_version = 2
